# tinychat

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml
locals/: teste.py
tinychat/: logging.py
tinychat/agents/: __init__.py  models.py  openai_agent.py  pandas_agent.py  registry.py
tinychat/chat/: conversation.py  utils.py
tinychat/examples/kavak_ai/: Dockerfile  README.md  agents.py  chat.py  docker-compose.yml  main.py  models.py  prompts.py  tools.py
tinychat/examples/kavak_ai/tests/: pandas_test.py
tinychat/examples/kavak_ai/utils/: blog_content.html  rag.py  scraper.py  text_chunks.json
tinychat/examples/quickstarts/: multiple_chats.py  single_chat.py
tinychat/manager/: in_memory.py  redis_db.py  redis_manager.py
tinychat/prompts/: pandas_agent.py
tinychat/rag/: chroma.py  local_vdb.py  models.py  registry.py
